...
            onClick = { viewModel.changeShape(BrushShape.Circle) },
            colors = ButtonDefaults.buttonColors(containerColor = Color.Transparent),
            modifier = Modifier.weight(1f)
        ) {
            Image(
                painter = circleIcon,
                contentDescription = "Circle Button",
                colorFilter = ColorFilter.tint(
                    if (selected == BrushShape.Circle) color else Color(0xFFBDBDBD)
                )
            )
        }

...
